--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Min hemsida</title>
-</head>
+  <title>Bob Ross
 <body>
-  <h1>Hej!</h1>
-  <p>Min första hemsida är online 😄</p> <br>
+  <h1><strong>Bob Ross</strong></h1>
+  <p>Här är en bild på Bob Ross.</p> <br>
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCduOQsk7qjTPI2v7H9_7XM_q5DvqporPqsTxNO-gbZtEsUPm7XrLldxf-6lKQR2Wk7JnjZfPRlM0yNT3gsNNpTF8pfMcuZAqsRtkqhKVf&s=10" height="200" width="300"
-  
+  <br>
+  <p>Han är grisch.</p>
+  <img src="https://news.artnet.com/app/news-upload/2025/08/bob-ross-mountain-lake-clouds-1024x772.jpeg"> <br>
+  <p>Målning av <em>Bob Ross</em></p>
+    
 </body
 </html>
