--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Bob Ross
+  <title>Bob Ross</title>
 <body>
   <h1><strong>Bob Ross</strong></h1>
   <p>Här är en bild på Bob Ross.</p> <br>
